...

type Props = {
  navigation: NativeStackNavigationProp<any>;
};

const automationIds = {
  screen: "co-user-home-screen",
  viewLifeFactsCard: "co-user-home-view-life-facts",
  viewPeopleCard: "co-user-home-view-people",
  viewEventsCard: "co-user-home-view-events",
  viewPhotosCard: "co-user-home-view-photos",
  addLifeFactsButton: "co-user-home-add-life-facts",
  addPeopleButton: "co-user-home-add-people",
  addEventsButton: "co-user-home-add-events",
  importContactsButton: "co-user-home-import-contacts",
...
