appId: host.exp.Exponent
---
- runFlow:
    when:
      visible: "memoria-app"
    commands:
      - tapOn: "memoria-app"
- extendedWaitUntil:
    visible:
      id: "login-screen"
    timeout: 30000
- tapOn:
    id: "login-email-input"
- inputText: "memoria.maestro.user.202604101747@gmail.com"
- copyTextFrom:
    id: "login-email-input"
- evalScript: ${output.email = maestro.copiedText}
